[package]
name = "lol-pros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-tz = "0.8.1"
csv = "1.2.1"
riven = "2.13.0"
tokio = { version = "1.26", features = ["rt-multi-thread"] }
