[package]
name = "lol-pros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.14", features = ["derive"] }
csv = "1.2.1"
prettytable-rs = "0.10.0"
riven = "2.13.0"
strip-ansi-escapes = "0.1.1"
tokio = { version = "1.26", features = ["rt-multi-thread"] }
yansi = "0.5.1"
